# m5_cpp_practice

./: CMakeLists.txt  README.md  main.cpp  substitution.txt  template.txt
